<resources>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="string_continue">Continue</string>
    <string name="important">IMPORTANT!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="driver_note_hint">Instructions for the driver</string>
    <string name="store_const_user_name">UserName</string>
    <string name="store_const_phone_num">PhoneNumber</string>
    <string name="store_const_account_num">AccountNum</string>
    <string name="store_const_password">Password</string>
    <string name="store_const_pin">PIN</string>
    <string name="store_const_first_time_map">FirstTimeMap</string>
    <string name="store_const_last_login">LastLogin</string>
    <string name="store_const_last_check_param">LastCheckParam</string>
    <string name="store_const_last_credit_card">LastCreditCard</string>
    <string name="store_const_is_am_pm">IsAmPm</string>
    <string name="store_const_preferred_company">PreferredCompany</string>
    <string name="step1">1</string>
    <string name="step2">2</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="re_enter_email">Re-Enter Email</string>
    <string name="phone_number">Phone Number (with area code)</string>
    <string name="personal_info">PERSONAL INFO</string>
    <string name="confirmation">CONFIRMATION</string>
    <string name="payment_method">Payment Method</string>
    <string name="cc_nick_name">Credit Card Nickname</string>
    <string name="cc_holder_name">Credit Card Holder Name</string>
    <string name="pin_hint">PIN (4-digit)</string>
    <string name="re_enter_pin_hint">Re-enter PIN (4-digit)</string>
    <string name="cc_number">Credit Card Number</string>
    <string name="pin_checkbox_text">User PIN protection for payment</string>
    <string name="empty_first_name">Please enter your First Name</string>
    <string name="empty_last_name">Please enter your Last Name</string>
    <string name="empty_name">Please enter your Name</string>
    <string name="empty_phone_number">Please enter your Phone Number</string>
    <string name="email_not_matching">Emails not matching</string>
    <string name="phone_number_too_long">Phone number is too long</string>
    <string name="empty_pin">Please Enter 4 digit Pin</string>
    <string name="invalid_pin_length">Pin Length must be 4</string>
    <string name="pin_not_matching">Pin not matching</string>
    <string name="pin_warning">Without PIN, payment can be used by anyone having access to this phone.\n\nAre you sure you want to continue?</string>
    <string name="warning">WARNING</string>
    <string name="pin_cannot_reset">PIN cannot be reset. Please choose your PIN carefully and keep it secure.</string>
    <string name="enter_verification">Enter the Verification Code, then click <b>Verify</b></string>
    <string name="verify_hint">Verification Code from SMS Message</string>
    <string name="verify_not_receive">Did not receive your Verification Code?</string>
    <string name="verify_check_phone">Check your phone number and  </string>
    <string name="verify_request_new"><u>request a new one.</u></string>
    <string name="verify_dialog_text">A Verification SMS message is generated and sent to you at %1$s.\n\nPlease check your message for Verification code</string>
    <string name="verify">VERIFY</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="verify_success">You can now begin to use Zoro</string>
    <string name="verify_success_confirm">Your phone number is successfully verified\n\nThank you!</string>
    <string name="verify_failed">Please enter the correct verification code</string>
    <string name="zip_code">Zipcode</string>
    <string name="enter_street_number">Enter a street number for:</string>
    <string name="enter_street_number_range">Select a street number between</string>
</resources>