<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/normal_padding"
    tools:context="digital.dispatch.TaxiLimoNewUI.VerifySMSActivity" >

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/personal_info"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_sms_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/normal_padding"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_verification"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/normal_padding"
            android:background="@drawable/shape_textview_border"
            android:hint="@string/verify_hint"
            android:paddingLeft="@dimen/normal_padding" 
            android:layout_marginBottom="40dp">
			
            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_padding"
            android:text="@string/verify_not_receive" 
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/request_new_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_request_new"
            android:textColor="@color/blue_text"
            android:clickable="true"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>
    
    <TextView
        android:id="@+id/verify_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:background="@drawable/white_button_selector"
        android:gravity="center"
        android:text="@string/verify"
        android:textSize="@dimen/next_size"/>

</RelativeLayout>