<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/normal_margin"
    android:background="@color/background"
    tools:context="digital.dispatch.TaxiLimoNewUI.RegisterActivity" >
    
    
    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"     
            android:text="@string/personal_info"
            android:paddingLeft="@dimen/small_padding"
            android:textSize="19sp"
            android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/ll_info_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/register_title"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_edit_text_height"
            android:layout_marginTop="@dimen/normal_padding"
            android:background="@drawable/editbox_background"
            android:textSize="@dimen/register_form_font_size"
            android:ems="5"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingLeft="@dimen/big_margin"
            android:selectAllOnFocus="true" >
        </EditText>

 

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_edit_text_height"
            android:layout_marginTop="@dimen/normal_padding"
            android:background="@drawable/editbox_background"
            android:textSize="@dimen/register_form_font_size"
            android:ems="5"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/big_margin" />

        

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_edit_text_height"
            android:layout_marginTop="@dimen/normal_padding"
            android:background="@drawable/editbox_background"
            android:ems="5"
            android:textSize="@dimen/register_form_font_size"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:paddingLeft="@dimen/big_margin" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ll_sms_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_info_form"
        android:layout_marginTop="@dimen/small_padding"
        android:orientation="vertical" 
        android:visibility="gone">


        <TextView
            android:id="@+id/enter_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_verification"
            android:paddingLeft="@dimen/small_padding"
            android:textSize="14sp" />
	        

        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_edit_text_height"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="@dimen/normal_padding"
            android:ems="5"
            android:imeOptions="actionDone"
            android:inputType="textNoSuggestions"
            android:textSize="@dimen/register_form_font_size"
            android:background="@drawable/editbox_background"
            android:hint="@string/verify_hint"
            android:paddingLeft="@dimen/big_margin">
			
            <requestFocus />
        </EditText>
		
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:orientation="horizontal" >
            
        <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:id="@+id/question_circle"
        	android:textColor="@color/gray_light"
        	android:layout_marginRight="@dimen/small_padding"
        	android:layout_marginTop="@dimen/normal_padding"
        	android:layout_marginLeft="@dimen/small_padding"
        	android:textSize="28sp"
        	android:text="A" />
        	
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:orientation="vertical">

        <TextView
            android:id="@+id/verify_not_receive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_padding"
            android:text="@string/verify_not_receive"
            android:textSize="12sp" />
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:orientation="horizontal">

	        <TextView
	            android:id="@+id/verify_check_phone"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/verify_check_phone"
	            android:textSize="12sp" />
	
	        <TextView
	            android:id="@+id/request_new_btn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:clickable="true"
	            android:text="@string/verify_request_new"
	            android:textColor="@drawable/request_new_selector"
	            android:textSize="12sp" />

        </LinearLayout>
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
   </RelativeLayout>

   <TextView
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/map_book_btn_height"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/small_padding"
            android:background="@drawable/white_button_selector"
            style="@style/TextDropShadowWhite"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/large_btn_text_color"
            android:textSize="@dimen/large_button_font_size"
            android:textStyle="bold" 
            android:visibility="gone"/>
   
   <TextView
            android:id="@+id/verify_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/map_book_btn_height"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/small_padding"
            android:background="@drawable/white_button_selector"
            style="@style/TextDropShadowWhite"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/verify"
            android:textColor="@color/large_btn_text_color"
            android:textSize="@dimen/large_button_font_size"
            android:textStyle="bold" 
            android:visibility="gone"/>

</RelativeLayout>

